<resources>
    <string name="app_name">Lifelines Breathalyzer</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_call">Call</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_past_results">Past Results</string>
    <string name="title_activity_test_alcohol">Alcohol Test</string>
    <string name="title_activity_heart_rate">Heart Rate</string>

    <string name="test">Begin Test</string>
    <string name="OK">OK</string>

    <string name="login_email">Email: </string>
    <string name="login_password">Password: </string>
    <string name="login">Login</string>
    <string name="login_signup">Not a member? Click here to sign up</string>
    <string name="login_remember">Remember Me</string>
    <string name="login_invalid">Email or Password is Invalid</string>
    <string name="login_no_user">User Not Found</string>
    <string name="login_error_message">Email/Password Cannot Be Empty</string>
    <string name="logout">Logout</string>

    <string name="signup">Sign Up</string>
    <string name="signup_name">Name: </string>
    <string name="signup_email">Email: </string>
    <string name="signup_password">Password: </string>
    <string name="signup_password_confirm">Confirm Password: </string>
    <string name="signup_city">City: </string>
    <string name="signup_province">Province: </string>
    <string name="signup_licence">Licence: </string>
    <string name="signup_address">Address: </string>
    <string name="signup_phone">Phone Number: </string>
    <string name="signup_button">Create Account</string>
    <string name="signup_learners">Learners Permit</string>
    <string name="signup_probationary">Probationary Licence</string>
    <string name="signup_full">Full Licence</string>
    <string name="signup_email_error">Email Already Taken</string>

    <string name="firebase_users" translatable="false">users</string>
    <string name="firebase_name" translatable="false">name</string>
    <string name="firebase_city" translatable="false">city</string>
    <string name="firebase_province" translatable="false">province</string>
    <string name="firebase_licence" translatable="false">licence</string>
    <string name="firebase_address" translatable="false">address</string>
    <string name="firebase_phone" translatable="false">phone</string>
    <string name="firebase_pastBAC" translatable="false">pastBAC</string>
    <string name="firebase_pastBPM" translatable="false">pastBPM</string>

    <string name="valid_name_empty">Name Cannot Be Empty</string>
    <string name="valid_name_not">Invalid Name</string>
    <string name="valid_email_empty">Email Cannot Be Empty</string>
    <string name="valid_email_not">Invalid Email</string>
    <string name="valid_phone_empty">Phone Number Cannot Be Empty</string>
    <string name="valid_phone_not">Invalid Phone Number</string>
    <string name="valid_address_empty">Address Cannot Be Empty</string>
    <string name="valid_address_not">Invalid Address</string>
    <string name="valid_password_empty">Password Cannot Be Empty</string>
    <string name="valid_password_not">Must Contain a Number, an Uppercase, and Be Over 8 Characters</string>
    <string name="valid_password_check">Password Does Not Match</string>
    <string name="valid_city_empty">City Cannot Be Empty</string>
    <string name="valid_city_not">Invalid City</string>
    <string name="PGrant">Permission Granted</string>
    <string name="PDecline">Permission Needed To Use Phone</string>
    <string name="dialog_invalid">1 or More Fields Are Invalid</string>
    <string name="dialog_error">Error</string>

    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="dialog_exit_title">Are You Sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_configure_contacts">Please configure your contacts</string>

    <string name="callPage">Call a Friend</string>
    <string name="callTaxi">Call a taxi</string>
    <string name="findHotel">Find a Hotel</string>
    <string name="pastRecords">Past Records</string>
    <string name="averageBAC">Average BAC</string>
    <string name="averageHeart">Average Heart Rate</string>
    <string name="pastBAC">Past BAC Levels</string>
    <string name="pastBPM">Past BPM Levels</string>
    <string name="title_activity_taxi">TaxiActivity</string>

    <string name="allStar">All Star Taxi</string>
    <string name="Beck">Beck Taxi</string>
    <string name="BlackCab">Black Cab</string>
    <string name="BlueWhite">Blue and White</string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <string name="call_tel">tel:</string>
    <string name="title_activity_contacts">ContactsActivity</string>



    <string name="configure_contacts">Configure Contacts</string>
    <string name="Contact">Contact 1</string>
    <string name="Contact2">Contact 2</string>
    <string name="Contact3">Contact 3</string>
    <string name="Contact4">Contact 4</string>
    <string name="Contact5">Contact 5</string>
    <string name="PhoneNum">Phone # 1:</string>
    <string name="PhoneNum2">Phone # 2:</string>
    <string name="PhoneNum3">Phone # 3:</string>
    <string name="PhoneNum4">Phone # 4:</string>
    <string name="PhoneNum5">Phone # 5:</string>
    <string name="Name">Name</string>
    <string name="ConNum">Contact 1 Number</string>
    <string name="ConNum2">Contact 2 Number</string>
    <string name="ConNum3">Contact 3 Number</string>
    <string name="ConNum4">Contact 4 Number</string>
    <string name="ConNum5">Contact 5 Number</string>
    <string name="SaveContacts">Save Contacts</string>
    <string name="HeartMon">Heart Monitor</string>
    <string name="BegAlco">Begin Alcohol Test</string>
    <string name="Res">Results</string>
    <string name="BegHeart">Begin Heart Monitor</string>
</resources>
